--- a/highmath_dashapp.css
+++ b/highmath_dashapp.css
@@ -10,12 +10,7 @@ body{
     user-select: none;          /* Likely future */
 }
 
-the 
-.app-title{
 
-}
-
-/* The box fort tittle */
 .app_title{
     
 /*     The box */
@@ -36,6 +31,8 @@ the
 .chart_div{
     background-color: white;
     border: 1px solid #C8D4E3;
-    border-radius: 3px;
-    height: 300px;
+    margin-top: 20px;
+    border-radius: 15px;
+    height: 400px;
+    vertical-align': 'middle
 }
