correct chart_div

--- a/highmath_dashapp.css
+++ b/highmath_dashapp.css
@@ -34,5 +34,5 @@ body{
     margin-top: 20px;
     border-radius: 15px;
     height: 400px;
-    vertical-alig: middle
+    vertical-align: middle
 }
