chart_div margin-bottom: 10x;

--- a/highmath_dashapp.css
+++ b/highmath_dashapp.css
@@ -33,6 +33,7 @@ body{
     background-color: white;
     border: 1px solid #C8D4E3;
     margin-top: 20px;
+    margin-bottom: 10x;
     border-radius: 15px;
     height: 400px;
     vertical-align: middle
