change body background color

--- a/highmath_dashapp.css
+++ b/highmath_dashapp.css
@@ -1,7 +1,7 @@
 body{
     margin:0;
     padding: 0;
-    background-color: #283e4a;
+    background-color: #f5f4f4;
     font-family: 'Open Sans', sans-serif;
     color: #506784;
     -webkit-user-select: none;  /* Chrome all / Safari all */
