add widget headers

--- a/highmath_dashapp.css
+++ b/highmath_dashapp.css
@@ -57,6 +57,10 @@ body{
     text-align: center;   
 }
 
+.widget_headers {
+    font-size: 80%;
+}
+
 td{
     text-align: left;
     padding: 0px;
