--- a/highmath_dashapp.css
+++ b/highmath_dashapp.css
@@ -8,6 +8,9 @@ body{
     -moz-user-select: none;     /* Firefox all */
     -ms-user-select: none;      /* IE 10+ */
     user-select: none;          /* Likely future */
+    -webkit-transform: scale(0.67);
+       -moz-transform: scale(0.67);
+            transform: scale(0.67);
 }
 
 /* The dashboard div */
