--- a/highmath_dashapp.css
+++ b/highmath_dashapp.css
@@ -85,3 +85,19 @@ table{
     width:100%;
     font-family:Ubuntu;
 }
+
+h3 {
+    font-size: 2.3rem;
+    line-height: 1.3;
+    letter-spacing: -.1rem;
+    margin-bottom: 1.5rem;
+    margin-top: 1.5rem;
+}
+
+h6 {
+    font-size: 1.8rem;
+    line-height: 1.6;
+    letter-spacing: 0;
+    margin-bottom: 0.75rem;
+    margin-top: 0.75rem;
+}
