--- a/highmath_dashapp.css
+++ b/highmath_dashapp.css
@@ -22,13 +22,14 @@ body{
 
 /* The dashboard div */
 .dash_div{
-    width': 90%;
+    width': 80%;
     padding-top: 10px;
     padding-right: 20px;
     padding-bottom: 10px;
     padding-left: 20px;
     margin-right: auto;
     margin-left: auto;
+    margin-bottom: 10px;
     width: 800px;
     textAlign: center;
 }
