--- a/highmath_dashapp.css
+++ b/highmath_dashapp.css
@@ -37,8 +37,8 @@ body{
 .app_title{
     
 /*     The box */
-    border:1px solid #C8D4E3;
-    border-radius: 5px;
+/*     border:1px solid #C8D4E3; */
+/*     border-radius: 5px; */
     background-color: #283e4a;
     height:70px;
     vertical-align:middle;
